--- a/she_codes_news/static/styles.css
+++ b/she_codes_news/static/styles.css
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nabla&family=Roboto+Slab&display=swap');
 
 body {
-    background-color: rgb(240, 239, 239);
+    background-color: black;
+    /* background-color: white; */
 }
 
 header {
@@ -9,26 +11,30 @@ header {
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #000;
+    /* background-color: black; */
 }
 
-img {
+/* img {
     filter: grayscale(100%);
-}
+} */
 
 h1 {
-    font-family: 'Montserrat Subrayada', sans-serif;
+    font-family: 'Nabla', cursive;
     text-decoration: none;
     font-size: 4rem;
     margin: 0;
+    color: white;
 }
 
 h2 {
-   font-family: 'Montserrat Subrayada', sans-serif; 
+   font-family: 'Roboto Slab', serif; 
+   color: white;
 }
 
 h3 {
     font-size: 2rem;
     margin: 0;
+    color: white;
 }
 
 #header-text {
@@ -46,9 +52,61 @@ nav {
 a {
     margin: 2px;
     text-decoration: none;
-    color: #000;
+    /* color: black; */
+    color: white;
 }
 
 a, p {
-    font-family: monospace;
+    font-family: 'Roboto Slab', serif;
+    color: white;
 }
+
+.create_story_form {
+    /* text-align: center; */
+    /* border:red solid 2px !important; */
+    /* width: 100%; */
+    /* width: 100%; */
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 6px;
+
+}
+
+.create_story_form input, textarea{
+    /* text-align: center; */
+    /* border:rgb(34, 0, 255) solid 2px !important; */
+    /* width: 100%; */
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 6px;
+
+}
+
+input[type=submit] {
+    background-color: rgb(244, 200, 53);
+    border: none;
+    color: white;
+    padding: 14px 30px;
+    font-size: 1rem;
+    margin: 4px 2px;
+    border-radius: 6px;
+
+}
+
+
+
+
+
+
+/* input[type=text]:focus {
+    background-color: rgb(198, 192, 229);
+  } */
+
+/* .create_story_form label input:focus{
+    background-color: rgb(198, 192, 229);
+} */
+
+ 
