--- a/she_codes_news/news/templates/news/index.html
+++ b/she_codes_news/news/templates/news/index.html
@@ -6,6 +6,11 @@
    {% endblock %}
 
    {% block content %}
+
+    {% if request.user.is_authenticated %}
+        <a href="{% url 'news:newStory' %}">Write New Story</a>
+    {% endif %}
+   
    
    <h2>Latest News</h2>
 
