--- a/she_codes_news/news/templates/news/newsstory_confirm_delete.html
+++ b/she_codes_news/news/templates/news/newsstory_confirm_delete.html
@@ -1,11 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h2>ARE YOU SURE YOU WANT TO DELETE</h2>
+<p> {{newsstory.title}}</p>
+<p> {{newsstory.content}}</p>
 <div class="create_story_form">
     <form action="" method="post"  >
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Submit">
+        <input type="submit" value="DELETE">
     </form>
 </div>
 
