--- a/she_codes_news/users/templates/users/customuser_detail.html
+++ b/she_codes_news/users/templates/users/customuser_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h2>{{customuser.username}}</h2>
+<h2>Stories written by {{customuser.username}}:</h2>
 
 <div>
     {% for story in customuser.stories.all %}
